[gd_scene load_steps=4 format=3 uid="uid://cprpmj8wrmjfm"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_2d800"]
[ext_resource type="Texture2D" uid="uid://osq8sktmosiy" path="res://Assests/Images/SinglePlayerButton.png" id="1_i514k"]
[ext_resource type="Texture2D" uid="uid://vqkt5k1umo8g" path="res://Assests/Images/TwoPlayersButton.png" id="2_y71ay"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_2d800")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1041.0
offset_bottom = 603.0
color = Color(0, 0, 0, 1)

[node name="TopButton" type="TextureButton" parent="."]
offset_left = 275.5
offset_top = 102.3
offset_right = 905.5
offset_bottom = 297.3
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("1_i514k")

[node name="BottomButton" type="TextureButton" parent="."]
offset_left = 275.75
offset_top = 350.85
offset_right = 905.75
offset_bottom = 545.85
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("2_y71ay")

[connection signal="pressed" from="TopButton" to="." method="_on_top_button_pressed"]
[connection signal="pressed" from="BottomButton" to="." method="_on_bottom_button_pressed"]
